--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Tom-shushu`s Web</title> 
+    <title>Yueyao's Web</title> 
     <!-- Js -->
     <link rel="stylesheet" href="style/css/bootstrap.min.css">
     <script src="style/js/jquery.min.js"></script>
@@ -45,32 +45,32 @@
         <ul class="cd-hero-slider autoplay">
             <li class="selected">
                 <div class="cd-half-width">
-                	
+
                     <h2>张月瑶</h2>
-                    <p>zhangyueyao</p>            
+                    <p>zhangyueyao</p>
                     <a class="cd-btn" href="about.html">关于站主</a>
                 </div>
                 <div class="cd-half-width cd-img-container">
-                    <img src="style/images/tech-1.png" alt="周红" title="周红" />
+                    <img src="style/images/tech-1.png" alt="周红" title="zhangyueyao" />
                 </div>
             </li>
             <li>
                 <div class="cd-full-width">
-                    <h2>观点与分享</h2>
+                    <h2>学术科研成果</h2>
                     <p>记录生活点滴，分享人生喜乐！</p>
                     <a class="cd-btn" href="https://www.cnblogs.com/Tom-shushu/" target="_blank">站主的博客园</a>
                 </div>
             </li>
             <li>
                 <div class="cd-full-width">
-                    <h2>影视，直播，购物</h2>
+                    <h2>数据分析与可视化</h2>
                     <p>观看生活影片，感受欢天喜地！</p>
                     <a class="cd-btn" href="vip/yule.html" target="_blank">娱乐</a>
                 </div>
             </li>
             <li class="cd-bg-video">
                 <div class="cd-full-width">
-                    <h2>志趣相投</h2>
+                    <h2>另一个我！以UP主的身份向你展示创意、风趣和美</h2>
                     <p>我们都一样热爱生活，记录生活，享受生活！</p>
                     <a class="cd-btn" href="friends.html">在各社区尽情的遨游吧</a>
                 </div>
@@ -79,7 +79,21 @@
             </li>
             <li>
                 <div class="cd-full-width">
-                    <h2>说走就走</h2>
+                    <h2>摄影</h2>
+                    <p>生活不止眼前的苟且，还有诗和远方的田野！拿起相机和你喜欢的人一起来一场说走就走的旅行也是不错的！！</p>
+                    <a class="cd-btn" href="tracks.html">我的相册</a>
+                </div>
+            </li>
+            <li>
+                <div class="cd-full-width">
+                    <h2>其他项目</h2>
+                    <p>生活不止眼前的苟且，还有诗和远方的田野！拿起相机和你喜欢的人一起来一场说走就走的旅行也是不错的！！</p>
+                    <a class="cd-btn" href="tracks.html">我的相册</a>
+                </div>
+            </li>
+            <li>
+                <div class="cd-full-width">
+                    <h2>随笔</h2>
                     <p>生活不止眼前的苟且，还有诗和远方的田野！拿起相机和你喜欢的人一起来一场说走就走的旅行也是不错的！！</p>
                     <a class="cd-btn" href="tracks.html">我的相册</a>
                 </div>
