--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-	<bgsound src="music/天空之城.mp3"></bgsound>
+	<bgsound src="music/close.mp3"></bgsound>
     <!-- Header -->
     <div class="nav">
     <a class="logo" href="index.html"><img src="style/images/logo.png" width="40" title="红"></a>
@@ -48,17 +48,17 @@
 
                     <h2>张月瑶</h2>
                     <p>zhangyueyao</p>
-                    <a class="cd-btn" href="about.html">关于站主</a>
+                    <!--<a class="cd-btn" href="about.html">关于站主</a>-->
                 </div>
                 <div class="cd-half-width cd-img-container">
-                    <img src="style/images/tech-1.png" alt="周红" title="zhangyueyao" />
+                    <img src="style/images/tech-1.png" alt="张月瑶" title="zhangyueyao" />
                 </div>
             </li>
             <li>
                 <div class="cd-full-width">
                     <h2>学术科研成果</h2>
                     <p>记录生活点滴，分享人生喜乐！</p>
-                    <a class="cd-btn" href="https://www.cnblogs.com/Tom-shushu/" target="_blank">站主的博客园</a>
+                    
                 </div>
             </li>
             <li>
@@ -72,6 +72,7 @@
                 <div class="cd-full-width">
                     <h2>另一个我！以UP主的身份向你展示创意、风趣和美</h2>
                     <p>我们都一样热爱生活，记录生活，享受生活！</p>
+                    <a class="cd-btn" href="https://www.cnblogs.com/Tom-shushu/" target="_blank">站主的博客园</a>
                     <a class="cd-btn" href="friends.html">在各社区尽情的遨游吧</a>
                 </div>
                 <div class="cd-bg-video-wrapper" data-video="Tpl/Individual/Style/index/video/video">
