--- a/index.html
+++ b/index.html
@@ -108,22 +108,22 @@
                         <a class="glyphicon glyphicon-user" href="#0">我</a>
                     </li>
                     <li>
-                        <a class="glyphicon glyphicon-fire" href="#0">学术</a>
+                        <a class="glyphicon glyphicon-blackboard" href="#0">学术</a>
                     </li>
                     <li>
-                        <a class="glyphicon glyphicon-film" href="#0">数据</a>
+                        <a class="glyphicon glyphicon-equalizer" href="#0">数据</a>
                     </li>
                     <li>
-                        <a class="glyphicon glyphicon-record" href="#0">UP主</a>
+                        <a class="glyphicon glyphicon-facetime-video" href="#0">UP主</a>
                     </li>
                     <li>
-                        <a class="glyphicon glyphicon-globe" href="#0">摄影</a>
+                        <a class="glyphicon glyphicon-camera" href="#0">摄影</a>
                     </li>
                     <li>
-                        <a class="glyphicon glyphicon-globe" href="#0">其他</a>
+                        <a class="glyphicon glyphicon-heart" href="#0">其他</a>
                     </li>
                     <li>
-                        <a class="glyphicon glyphicon-globe" href="#0">随笔</a>
+                        <a class="glyphicon glyphicon-text-size" href="#0">随笔</a>
                     </li>
                 </ul>
             </nav>
