--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>Scenic HTML Template</title>
+<title>zhangyueyao website</title>
 
 <!--
 
@@ -52,17 +52,20 @@ http://www.tooplate.com/view/2099-scenic
                     <span class="icon icon-bar"></span>
                </button>
                <!-- lOGO -->
-               <a href="index.html" class="navbar-brand">Scenic</a>
+               <a href="index.html" class="navbar-brand">首页</a>
           </div>
 
           <!-- MENU LINKS -->
           <div class="collapse navbar-collapse">
-               <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#home" class="smoothScroll">Home</a></li>
-                    <li><a href="#about" class="smoothScroll">Studio</a></li>
-                    <li><a href="#team" class="smoothScroll">Our People</a></li>  
-                    <li><a href="#contact" class="smoothScroll">Let's talk</a></li>
-               </ul>
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#home" class="smoothScroll">我</a></li>
+                  <li><a href="#about" class="smoothScroll">学术</a></li>
+                  <li><a href="#team" class="smoothScroll">数据</a></li>
+                  <li><a href="#about" class="smoothScroll">UP主</a></li>
+                  <li><a href="#about" class="smoothScroll">摄影</a></li>
+                  <li><a href="#about" class="smoothScroll">其他</a></li>
+                  <li><a href="#contact" class="smoothScroll">随笔</a></li>
+              </ul>
           </div>
 
      </div>
@@ -77,10 +80,10 @@ http://www.tooplate.com/view/2099-scenic
 
                <div class="col-md-8 col-sm-12">
                     <div class="home-text">
-                         <h1>Your Website has a video background!</h1>
-                         <p>Feel free to download and use HTML templates from Tooplate</p>
+                         <h1>张月瑶</h1>
+                         <p>热爱数据分析与可视化，摄影与视频创作，热爱生活在集体之中</p>
                          <ul class="section-btn">
-                              <a href="#about" class="smoothScroll"><span data-hover="Discover More">Discover More</span></a>
+                              <a href="#about" class="smoothScroll"><span data-hover="Discover More">关于我</span></a>
                          </ul>
                     </div>
                </div>
@@ -103,8 +106,8 @@ http://www.tooplate.com/view/2099-scenic
 
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="about-info">
-                         <h3>Introducing Scenic</h3>
-                         <h1>This template is designed for you. Sed ornare, tortor nec placerat lacinia, leo quam rutrum leo, eget posuere ipsum sem eu justo. Integer nunc libero.</h1>
+                         <h3>学术创新与科研</h3>
+                         <h1>智能织物，数据分析，数据可视化，全景导航</h1>
                     </div>
                </div>
 
