--- a/index.html
+++ b/index.html
@@ -91,11 +91,7 @@ http://www.tooplate.com/view/2099-scenic
             </div>
         </div>
 
-        <!-- Video -->
-        <video controls autoplay loop muted>
-            <source src="videos/video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+
     </section>
 
 
@@ -106,8 +102,8 @@ http://www.tooplate.com/view/2099-scenic
 
                 <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="about-info">
-                        <h3>学术创新与科研</h3>
-                        <h1>智能织物，数据分析，数据可视化，全景导航</h1>
+                        <h3>智能织物，数据分析，数据可视化，全景导航</h3>
+                        <h1>学术创新与科研</h1>
                     </div>
                 </div>
 
@@ -190,7 +186,7 @@ http://www.tooplate.com/view/2099-scenic
     </section>
 
 
-    <!-- TEAM -->
+    <!-- UP -->
     <section id="up" class="parallax-section">
         <div class="container">
             <div class="row">
@@ -281,10 +277,16 @@ http://www.tooplate.com/view/2099-scenic
 
             </div>
         </div>
+        <!-- Video -->
+        <video controls autoplay loop muted>
+            <source src="videos/video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
     </section>
 
 
-    <!-- CONTACT -->
+    <!-- PHOTO -->
     <section id="photo" class="parallax-section">
         <div class="container">
             <div class="row">
@@ -479,55 +481,7 @@ http://www.tooplate.com/view/2099-scenic
     </section>
 
 
-    <!-- FOOTER -->
-    <footer>
-        <div class="container">
-            <div class="row">
 
-                <div class="col-md-5 col-sm-6">
-                    <h2>Digital Studio</h2>
-                    <p>321 Donec et justo id risus, Malesuada pharetra,<br> Tristique vestibulum,<br> Lorem ipsum dolor</p>
-
-
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-                    <div class="footer-info">
-                        <h2>Keep in touch</h2>
-                        <p><a href="tel:010-090-0780">010-090-0780</a></p>
-                        <p><a href="mailto:info@company.com">info@company.com</a></p>
-                        <p><a href="#">Our Location</a></p>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-sm-12">
-
-                    <h2>About Us</h2>
-                    <p>Sed vestibulum posuere ante, eget blandit metus. Morbi sodales feugiat erat, et placerat sapien suscipit ut.</p>
-                    <ul class="social-icon">
-                        <li><a href="#" class="fa fa-twitter"></a></li>
-                        <li><a href="#" class="fa fa-facebook"></a></li>
-                        <li><a href="#" class="fa fa-instagram"></a></li>
-                        <li><a href="#" class="fa fa-linkedin"></a></li>
-                    </ul>
-
-                </div>
-
-                <div class="clearfix"></div>
-
-                <div class="col-md-12 col-sm-12">
-                    <div class="copyright-text">
-                        <p>
-                            Copyright © 2018 Company Name
-
-                            | Design: Tooplate
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </footer>
 
     <!-- SCRIPTS -->
     <script src="js/jquery.js"></script>
