--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; 2022 Yueyao Zhang. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
+				<p><small>&copy; 2022年.个人网站尚在建设中. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
 
 			</div>
 
