--- a/about.html
+++ b/about.html
@@ -73,9 +73,9 @@
 					<li><a href="index.html">我</a></li>
 					<li><a href="blog.html">学术</a></li>
 					<li><a href="blog.html">数据项目</a></li>
-					<li><a href="portfolio.html">摄影</a></li>
-					<li><a href="blog.html">其他</a></li>
 					<li><a href="contact.html">UP主</a></li>
+					<li><a href="portfolio.html">摄影</a></li>
+					<li><a href="blog.html">其他创意</a></li>
 					<li><a href="blog.html">随笔</a></li>
 				</ul>
 			</nav>
