--- a/blog.html
+++ b/blog.html
@@ -70,11 +70,13 @@
 			<h1 id="fh5co-logo"><a href="index.html">Marble</a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="fh5co-active"><a href="blog.html">Blog</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="index.html">我</a></li>
+					<li><a href="blog.html">学术</a></li>
+					<li><a href="blog.html">数据项目</a></li>
+					<li><a href="contact.html">UP主</a></li>
+					<li><a href="portfolio.html">摄影</a></li>
+					<li><a href="blog.html">其他创意</a></li>
+					<li><a href="blog.html">随笔</a></li>
 				</ul>
 			</nav>
 
@@ -92,7 +94,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Read Our Blog</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">学术科研与创新</h2>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
