--- a/contact.html
+++ b/contact.html
@@ -70,11 +70,13 @@
 			<h1 id="fh5co-logo"><a href="index.html">Marble</a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="about.html">About</a></li>
-					<li class="fh5co-active"><a href="contact.html">Contact</a></li>
+					<li><a href="index.html">我</a></li>
+					<li><a href="blog.html">学术</a></li>
+					<li><a href="blog.html">数据项目</a></li>
+					<li><a href="contact.html">UP主</a></li>
+					<li><a href="portfolio.html">摄影</a></li>
+					<li><a href="blog.html">其他创意</a></li>
+					<li><a href="blog.html">随笔</a></li>
 				</ul>
 			</nav>
 
