--- a/about.html
+++ b/about.html
@@ -71,12 +71,12 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">我</a></li>
-					<li><a href="blog.html">学术</a></li>
-					<li><a href="blog.html">数据项目</a></li>
-					<li><a href="contact.html">UP主</a></li>
-					<li><a href="portfolio.html">摄影</a></li>
-					<li><a href="blog.html">其他创意</a></li>
-					<li><a href="blog.html">随笔</a></li>
+					<li><a href="study.html">学术</a></li>
+					<li><a href="data.html">数据项目</a></li>
+					<li><a href="up.html">UP主</a></li>
+					<li><a href="photo.html">摄影</a></li>
+					<li><a href="other.html">其他创意</a></li>
+					<li><a href="notes.html">随笔</a></li>
 				</ul>
 			</nav>
 
