--- a/up.html
+++ b/up.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Marble &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
+	<title>张月瑶 &mdash; Free HTML5 Bootstrap Website Template by FreeHTML5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -71,23 +71,17 @@
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">我</a></li>
-					<li><a href="blog.html">学术</a></li>
-					<li><a href="blog.html">数据项目</a></li>
-					<li><a href="contact.html">UP主</a></li>
-					<li><a href="portfolio.html">摄影</a></li>
-					<li><a href="blog.html">其他创意</a></li>
-					<li><a href="blog.html">随笔</a></li>
+					<li><a href="study.html">学术</a></li>
+					<li><a href="data.html">数据项目</a></li>
+					<li><a href="up.html">UP主</a></li>
+					<li><a href="photo.html">摄影</a></li>
+					<li><a href="other.html">其他创意</a></li>
+					<li><a href="notes.html">随笔</a></li>
 				</ul>
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; 2016 Blend Free HTML5. All Rights Reserved.</span> <span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> <span>Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></span></small></p>
-				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-				</ul>
+				<p><small>&copy; 2022年.个人网站尚在建设中. All Rights Reserved.</span> <span>Frame Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> </small></p>
 			</div>
 
 		</aside>
