--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
 				   			<div class="row">
 					   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 					   				<div class="slider-text-inner">
-					   					<h1>Intuitive <strong></strong> is How Give We the User New Superpowers</h1>
-					   					<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-											<p><a class="btn btn-primary btn-demo popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"> <i class="icon-monitor"></i> Live Preview</a> <a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-					   				</div>
+											<h1>创意 <strong></strong> 最大的敌人就是自我怀疑——Sylvia Plath</h1>
+											<h2>热爱一切天马行空的想象，总是灵光乍现</h2>
+									</div>
 					   			</div>
 					   		</div>
 				   		</div>
@@ -110,11 +109,10 @@
 				   		<div class="container-fluid">
 				   			<div class="row">
 					   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<h1>We are Happy to Create Newest Modern Websites</h1>
-											<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-											<p><a class="btn btn-primary btn-demo popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"> <i class="icon-monitor"></i> Live Preview</a> <a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-					   				</div>
+										<div class="slider-text-inner">
+											<h1>自来熟！ <strong></strong> 希望我们可以成为朋友</h1>
+											<h2>热爱有凝聚力的集体，总是乐在其中</h2>
+										</div>
 					   			</div>
 					   		</div>
 				   		</div>
@@ -124,11 +122,10 @@
 				   		<div class="container-fluid">
 				   			<div class="row">
 					   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<h1>Download our Free HTML5 Bootstrap Template</h1>
-											<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-											<p><a class="btn btn-primary btn-demo popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"> <i class="icon-monitor"></i> Live Preview</a> <a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
-					   				</div>
+										<div class="slider-text-inner">
+											<h1>理想，逆境，伙伴 <strong></strong> 自我情绪的调节能力，猫咪</h1>
+											<h2>驱动前行的力量，它们同等重要</h2>
+										</div>
 					   			</div>
 					   		</div>
 				   		</div>
