--- a/other.html
+++ b/other.html
@@ -88,7 +88,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">学术科研与创新</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">其他，海报/小工具/胡乱手绘</h2>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
