--- a/up.html
+++ b/up.html
@@ -89,6 +89,8 @@
 		<div id="fh5co-main">
 			<div class="fh5co-more-contact">
 				<div class="fh5co-narrow-content">
+					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">另一个我！作为UP主的创作者</h2>
+
 					<div class="row">
 						<div class="col-md-4">
 							<div class="fh5co-feature fh5co-feature-sm animate-box" data-animate-effect="fadeInLeft">
