--- a/study.html
+++ b/study.html
@@ -90,45 +90,52 @@
 			<div class="fh5co-narrow-content">
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">数据分析与可视化</h2>
 				<div class="row row-bottom-padded-md">
+
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">织物用于人体运动捕捉中的布局生成研究</a></h3>
+								<span><small>毕设 </small> / <small> Matlab </small> / <small> <i class="icon-comment"></i>2022</small></span>
+								<p>着眼于智能织物用于人体运动捕捉时的传感器布设问题，旨在剖析织物传感器的设计参数与标准，利用算法生成一定条件下更优的布设方案</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">织物传感器用于人体运动监测的综述性论文工作</a></h3>
+								<span><small>Paper </small> / <small> Review </small> / <small> <i class="icon-comment"></i> 2021-2022</small></span>
+								<p>全面分析基于智能纺织品的人体运动监测可穿戴系统，从材料、传感机理、运动算法、传感布设、原型、反馈、用户等多维度剖析领域相关成果的综述性研究</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">面向运动捕捉的互电容刺绣交互界面研究</a></h3>
+								<span><small>织物交互界面 </small> / <small> 单片机 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
+								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，约形成了20余例织物交互界面</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<h3><a href="#">智能织物纺织品艺术设计</a></h3>
+								<span><small>项目申报 </small> / <small> 智能变色织物 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
 								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
@@ -139,30 +146,32 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-5.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">上肢康复织物传感网设计方法与评估</a></h3>
+								<span><small>项目申报 </small> / <small> 特征选择优化 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
+								<p>面向上肢康复运动捕捉的织物传感器布设方案的智能生成，以支持脑卒中患者的有效的康复训练，研究拉伸应变织物传感单元特性和高精度织物传感网布设方案优化生成算法</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<h3><a href="#">体医协同平台关键技术研究任务</a></h3>
+								<span><small>项目申报 </small> / <small> 可穿戴 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
 								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<h3><a href="#">温致变色刺绣的织物界面制造工艺</a></h3>
+								<span><small>专利 </small> / <small> 智能变色织物 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
 								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
