--- a/study.html
+++ b/study.html
@@ -88,7 +88,7 @@
 
 		<div id="fh5co-main">
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">数据分析与可视化</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">学术科研与创新</h2>
 				<div class="row row-bottom-padded-md">
 
 
@@ -120,27 +120,17 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/capacitance.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">面向运动捕捉的互电容刺绣交互界面研究</a></h3>
 								<span><small>织物交互界面 </small> / <small> 单片机 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，约形成了20余例织物交互界面</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，约形成了20余例织物交互界面，连接电脑进行触控</p>
+								<a href="images/detail/capacitance-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								
 							</div>
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">智能织物纺织品艺术设计</a></h3>
-								<span><small>项目申报 </small> / <small> 智能变色织物 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-							</div>
-						</div>
-					</div>
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -160,7 +150,7 @@
 							<div class="desc">
 								<h3><a href="#">体医协同平台关键技术研究任务</a></h3>
 								<span><small>项目申报 </small> / <small> 可穿戴 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<p>研究致力于研究全生命周期的重点功能性疾病的主动健康干预关键技术，建设针对各类人群全生命周期的体医协同及科普平台</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -171,8 +161,8 @@
 							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">温致变色刺绣的织物界面制造工艺</a></h3>
-								<span><small>专利 </small> / <small> 智能变色织物 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<span><small>专利&工作坊 </small> / <small> 智能变色织物 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
+								<p>实现基于罗泾十字挑花的感温变色刺绣织物，能够完成通电激活变色功能，并申报基于温致变色刺绣的织物界面制造工艺专利</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
@@ -181,10 +171,12 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<h3><a href="#">数字感知时代的嗅觉在中国的发展概述</a></h3>
+								<span><small>文章 </small> / <small> 数字嗅觉 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>综述了目前国内对数字嗅觉的研究概况，从理论研究、技术手段、行业应用、商业产品等角度进行调研和分析。</p>
+								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+
+								<a href="Test.pdf" target="_blank">PDF<a>
 							</div>
 						</div>
 					</div>
