--- a/study.html
+++ b/study.html
@@ -126,8 +126,8 @@
 								<span><small>织物交互界面 </small> / <small> 单片机 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
 								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，约形成了20余例织物交互界面，连接电脑进行触控</p>
 								<a href="images/detail/capacitance-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-								
-							</div>
+								<a href="images/detail/capacitance-detail.jpg" target="_blank">Poster<a>
+</div>
 						</div>
 					</div>
 
@@ -169,14 +169,13 @@
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/smell.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">数字感知时代的嗅觉在中国的发展概述</a></h3>
 								<span><small>文章 </small> / <small> 数字嗅觉 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>综述了目前国内对数字嗅觉的研究概况，从理论研究、技术手段、行业应用、商业产品等角度进行调研和分析。</p>
 								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-
-								<a href="Test.pdf" target="_blank">PDF<a>
+								<a href="doc/smell.pdf" target="_blank">PDF<a>
 							</div>
 						</div>
 					</div>
