--- a/study.html
+++ b/study.html
@@ -127,7 +127,7 @@
 								<p>基于互电容刺绣技术，研制出可多点交互的织物界面原型，约形成了20余例织物交互界面，连接电脑进行触控</p>
 								<a href="images/detail/capacitance-detail.jpg" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="images/detail/capacitance-detail.jpg" target="_blank">Poster<a>
-</div>
+							</div>
 						</div>
 					</div>
 
@@ -172,7 +172,7 @@
 							<a href="#" class="blog-img"><img src="images/smell.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">数字感知时代的嗅觉在中国的发展概述</a></h3>
-								<span><small>文章 </small> / <small> 数字嗅觉 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<span><small>课程论文 </small> / <small> 数字嗅觉 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>综述了目前国内对数字嗅觉的研究概况，从理论研究、技术手段、行业应用、商业产品等角度进行调研和分析。</p>
 								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="doc/smell.pdf" target="_blank">PDF<a>
@@ -182,48 +182,114 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/car.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">虚拟车朋友：车与你的情感依赖</a></h3>
+								<span><small>创新创业课 </small> / <small> 汽车场景创新 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
+								<p>打造一个(基于AR的)车虚拟朋友，让车内外时空与车形成日常、反复的行为交互，让人与车形成依赖，这种与车之间的依赖，带来个人归属感，带来情感牵引。</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/bianwei.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">[变味]嗅错觉与情感唤起</a></h3>
+								<span><small>媒体传达课 </small> / <small> 嗅觉展览 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>[简单的气味错觉] [欺骗性的气味错觉] [讽刺性的气味错觉] [故事性的气味错觉] 由浅入深，吸引观众探索不同的嗅觉故事</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/digitalsmell.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">数字嗅觉应用：创意集群</a></h3>
+								<span><small>媒体传达课 </small> / <small> ideas </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>[家乡的味道][调香盒][香水生成器][气味喇叭][嗅觉剥离][气味书]...一切有关数字嗅觉的创意</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/linli.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">邻里百事互助社区应用</a></h3>
+								<span><small>交互设计课 </small> / <small> 交互原型 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>从激活社区本身资源的角度出发,构建一个资源互联的社区,帮助实现实现社区内、社区与社区之间的信息共享,最终能够构成社区资源互助生态圈</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							
+							<div class="cd-bg-video-wrapper" data-video="video/breathing">
+							</div>
+
+							<!-- Video -->
+							<video controls autoplay loop muted>
+								<source src="video/breathing.mp4" type="video/mp4">
+								Your browser does not support the video tag.
+							</video>
+
 							<div class="desc">
-								<h3><a href="#">Inspirational Website</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
-								<p>Design must be functional and functionality must be translated into visual aesthetics</p>
+								<h3><a href="#">无法挽回的呼吸-为死亡而设计</a></h3>
+								<span><small>媒体传达课 </small> / <small> 概念交互 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>用弱交互式呼吸聆听的H5形式，表达与体验肺炎患者最后的moment，用近乎暴力的方式灌入听者的耳朵，结合交互操作激起观者的无力、绝望、压抑</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
 					</div>
+
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/chanpin.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">实习资源服务平台——菜鸟实习</a></h3>
+								<span><small>产品服务体系课 </small> / <small> 用户分析 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>针对非全日制学生并无固定导师，难以接触到丰富的校内实习资源问题而产出的服务体系设计。</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/naxie.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">[那些人]时代变迁互动展馆设计</a></h3>
+								<span><small>交互设计课 </small> / <small> 互动展馆 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>根据历史和影视文艺作品为参考，虚构出四个时代不同角色，让参观者分别体验多人物在不同时代的生活片段，“具象、写实、体验”时代的缩影</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">S-Sports，游戏化健身应用</a></h3>
+								<span><small>交互设计课 </small> / <small> 交互原型/Processing </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+
+
+
 				</div>
 			</div>
 		
