--- a/study.html
+++ b/study.html
@@ -229,16 +229,16 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-4.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							
-							<div class="cd-bg-video-wrapper" data-video="video/breathing">
-							</div>
+							<a href="#" class="blog-img">
+								<!-- Video -->
+								<video controls autoplay loop muted>
+									<source src="video/breathing.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</a>
 
-							<!-- Video -->
-							<video controls autoplay loop muted>
-								<source src="video/breathing.mp4" type="video/mp4">
-								Your browser does not support the video tag.
-							</video>
+
+							
 
 							<div class="desc">
 								<h3><a href="#">无法挽回的呼吸-为死亡而设计</a></h3>
