--- a/study.html
+++ b/study.html
@@ -94,10 +94,10 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/bishe.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">织物用于人体运动捕捉中的布局生成研究</a></h3>
-								<span><small>毕设 </small> / <small> Matlab </small> / <small> <i class="icon-comment"></i>2022</small></span>
+								<span><small>毕设 </small> / <small> Matlab/交互原型 </small> / <small> <i class="icon-comment"></i>2022</small></span>
 								<p>着眼于智能织物用于人体运动捕捉时的传感器布设问题，旨在剖析织物传感器的设计参数与标准，利用算法生成一定条件下更优的布设方案</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
@@ -107,7 +107,7 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/review.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">织物传感器用于人体运动监测的综述性论文工作</a></h3>
 								<span><small>Paper </small> / <small> Review </small> / <small> <i class="icon-comment"></i> 2021-2022</small></span>
@@ -231,14 +231,12 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img">
 								<!-- Video -->
-								<video controls autoplay loop muted>
+								<video controls autoplay loop muted  class="img-responsive">
 									<source src="video/breathing.mp4" type="video/mp4">
 									Your browser does not support the video tag.
 								</video>
 							</a>
 
-
-							
 
 							<div class="desc">
 								<h3><a href="#">无法挽回的呼吸-为死亡而设计</a></h3>
