--- a/study.html
+++ b/study.html
@@ -167,6 +167,20 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/pacific.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">情感可视化：Smile or Scowl? Looking at Infographic Design Through the Affective Lens</a></h3>
+								<span><small>Paper </small> / <small> 可视化 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
+								<p>什么因素触发了信息图表中的情感反应？参与数据分析，负责网页前后端设计与开发，网页交互式呈现设计因素与设计案例，加入了图片瀑布流、主题色更换等功能。</p>
+								<a href="doc/smell.pdf" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="doc/smell.pdf" target="_blank">PDF<a>
+							</div>
+						</div>
+					</div>
+
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/smell.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
@@ -231,7 +245,7 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img">
 								<!-- Video -->
-								<video controls autoplay loop muted  class="img-responsive">
+								<video controls autoplay loop muted class="img-responsive">
 									<source src="video/breathing.mp4" type="video/mp4">
 									Your browser does not support the video tag.
 								</video>
@@ -284,6 +298,63 @@
 							</div>
 						</div>
 					</div>
+
+
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">基于室内全景导航的商场服务系统</a></h3>
+								<span><small>创新创业项目 </small> / <small> 创业/APP </small> / <small> <i class="icon-comment"></i> 2017-2018</small></span>
+								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">全景布设点</a></h3>
+								<span><small>Paper </small> / <small> 交互原型/Processing </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">CNN影像分类：</a></h3>
+								<span><small>Paper </small> / <small> 交互原型/Processing </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">更多待补充..</a></h3>
+								<span><small>Paper </small> / <small> 交互原型/Processing </small> / <small> <i class="icon-comment"></i> 2018</small></span>
+								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
+								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+							</div>
+						</div>
+					</div>
+
+
+
+
+
 
 
 
