--- a/study.html
+++ b/study.html
@@ -134,7 +134,7 @@
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-5.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/feature.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">上肢康复织物传感网设计方法与评估</a></h3>
 								<span><small>项目申报 </small> / <small> 特征选择优化 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
@@ -144,21 +144,10 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-6.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-							<div class="desc">
-								<h3><a href="#">体医协同平台关键技术研究任务</a></h3>
-								<span><small>项目申报 </small> / <small> 可穿戴 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
-								<p>研究致力于研究全生命周期的重点功能性疾病的主动健康干预关键技术，建设针对各类人群全生命周期的体医协同及科普平台</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
-							</div>
-						</div>
-					</div>
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images/img-3.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="blog-img"><img src="images/color.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3><a href="#">温致变色刺绣的织物界面制造工艺</a></h3>
 								<span><small>专利&工作坊 </small> / <small> 智能变色织物 </small> / <small> <i class="icon-comment"></i> 2021</small></span>
@@ -209,7 +198,7 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/bianwei.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">[变味]嗅错觉与情感唤起</a></h3>
+								<h3><a href="#">『变味』嗅错觉与情感唤起</a></h3>
 								<span><small>媒体传达课 </small> / <small> 嗅觉展览 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>[简单的气味错觉] [欺骗性的气味错觉] [讽刺性的气味错觉] [故事性的气味错觉] 由浅入深，吸引观众探索不同的嗅觉故事</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
@@ -279,7 +268,7 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/naxie.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">[那些人]时代变迁互动展馆设计</a></h3>
+								<h3><a href="#">『那些人，那些事』时代变迁互动展馆设计</a></h3>
 								<span><small>交互设计课 </small> / <small> 互动展馆 </small> / <small> <i class="icon-comment"></i> 2020</small></span>
 								<p>根据历史和影视文艺作品为参考，虚构出四个时代不同角色，让参观者分别体验多人物在不同时代的生活片段，“具象、写实、体验”时代的缩影</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
@@ -291,7 +280,7 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">S-Sports，游戏化健身应用</a></h3>
+								<h3><a href="#">S-Sports：游戏化健身应用</a></h3>
 								<span><small>交互设计课 </small> / <small> 交互原型/Processing </small> / <small> <i class="icon-comment"></i> 2019</small></span>
 								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
@@ -305,7 +294,7 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">基于室内全景导航的商场服务系统</a></h3>
+								<h3><a href="#">PanoGo：基于室内全景导航的商场服务系统</a></h3>
 								<span><small>创新创业项目 </small> / <small> 创业/APP </small> / <small> <i class="icon-comment"></i> 2017-2018</small></span>
 								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
@@ -317,10 +306,11 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">全景布设点</a></h3>
-								<span><small>Paper </small> / <small> 交互原型/Processing </small> / <small> <i class="icon-comment"></i> 2018</small></span>
-								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<h3><a href="#">全景布设点：LOCATION DISTRIBUTION OPTIMIZATION OF PHOTOGRAPHING SITES FOR INDOOR PANORAMA MODELING</a></h3>
+								<span><small>Paper </small> / <small> 室内导航 </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<p>提出一种标准程序，用于生成室内全景建模中全景站点的具体位置和总数，建立全景场地与其目标之间的功能关系，将关系应用于全景站点网络使用距离清晰度函数（FC和Fe）表示全景图和目标距离或障碍物距离之间的数学关系</p>
+								<a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/IV-2-W4/431/2017/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/IV-2-W4/431/2017/" target="_blank">链接<a>
 							</div>
 						</div>
 					</div>
@@ -330,10 +320,11 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/sports.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">CNN影像分类：</a></h3>
-								<span><small>Paper </small> / <small> 交互原型/Processing </small> / <small> <i class="icon-comment"></i> 2018</small></span>
-								<p>面向无驱动力健身人群，加入游戏化设计提升用户健身体验，建立智能可穿戴健身产品与用户之间的游戏化律动互动桥梁</p>
-								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<h3><a href="#">CNN影像分类：APPLICATION OF CONVOLUTIONAL NEURAL NETWORK IN CLASSIFICATION OF HIGH RESOLUTION AGRICULTURAL REMOTE SENSING IMAGES</a></h3>
+								<span><small>Paper </small> / <small> CNN/Matlab </small> / <small> <i class="icon-comment"></i> 2017</small></span>
+								<p>提出一种基于卷积神经网络（CNN）的高分辨率农业遥感影像分类方法，通过在MATLAB深度学习工具箱下的CNN上进行训练和测试，经过训练中调整参数的逐步优化，作物分类最终得到了99.66%的正确率。</p>
+								<a href="https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLII-2-W7/989/2017/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XLII-2-W7/989/2017/" target="_blank">链接<a>
 							</div>
 						</div>
 					</div>
